...
      case CombinedScanStatus.generatingNavmesh:
      case CombinedScanStatus.downloadingNavmesh:
        return 'Generating NavMesh';
      case CombinedScanStatus.completed:
        return 'NavMesh Ready';
      case CombinedScanStatus.failed:
        return 'Failed';
    }
  }

  List<Widget> _buildStatusSteps() {
    return [
      _buildStep(
...
